fix 'elements fall outside the viewport'
The page content is too wide for the viewport, forcing the user to scroll horizontally. 

The page content is 480 CSS pixels wide, but the viewport is only 320 CSS pixels wide. 
http://developers.google.com/speed/pagespeed/insights/?url=cappuccino-project.org

--- a/source/css/main.css.scss
+++ b/source/css/main.css.scss
@@ -991,7 +991,7 @@ i {
 
     .span8 {
       // Ahh perfectly alright.
-      width: 460px;
+      width: auto;
     }
 
     .info {
